# zero2prod

./: .env  Cargo.toml  Dockerfile
.github/workflows/: audit.yml  general.yml
scripts/: create_migration.sh  init_db.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health.rs  health_check.rs  helpers.rs  subscribes.rs  subscriptions.rs
