[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Daniel Cunha <dvlc@me.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
actix-web = "4.5"
config = "0.14"
env_logger = "0.11.3"
uuid = { version = "1", features = ["v4"] }

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock"]

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["runtime-tokio", "macros", "postgres", "uuid", "chrono", "migrate"]

[dev-dependencies]
reqwest = "0.12"
