[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Daniel Cunha <dvlc@me.com>"]
edition = "2021"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
actix-web = "4.5"
claims = "0.7.1"
config = "0.14"
once_cell = "1.19.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde-aux = "4.5.0"
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7.10"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1.11.0"
uuid = { version = "1", features = ["v4"] }

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock"]

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["runtime-tokio", "macros", "postgres", "uuid", "chrono", "migrate"]

[dev-dependencies]
reqwest = "0.12"
