[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Daniel Cunha <danielsoro@gmail.com>"]
edition = "2021"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
actix-web = "4.9.0"
claims = "0.8.0"
config = "0.15.4"
once_cell = "1.20.2"
secrecy = { version = "0.10.3", features = ["serde"] }
serde-aux = "4.5.0"
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7.15"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3.19", features = [
  "registry",
  "env-filter",
] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.11.0", features = ["v4"] }
validator = "0.19.0"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock"]

[dependencies.tokio]
version = "1.42.0"
features = ["macros", "rt-multi-thread"]

[dependencies.serde]
version = "1.0.215"
features = ["derive"]

[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = ["runtime-tokio", "macros", "postgres", "uuid", "chrono", "migrate"]

[dev-dependencies]
fake = "3.0.1"
reqwest = "0.12.9"
